control/chameleon_zf90.F90


  interface
     function CHAMELEON_zsytrs_Tile_c(uplo,A,B) &
          & bind(c, name='CHAMELEON_zsytrs_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsytrs_Tile_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
     end function CHAMELEON_zsytrs_Tile_c
  end interface

  interface
     function CHAMELEON_zsymm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='CHAMELEON_zsymm_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsymm_Tile_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
     end function CHAMELEON_zsymm_Tile_c
  end interface

  interface
     function CHAMELEON_zsyr2k_Tile_c(uplo,trans,alpha,A,B,beta,C) &
          & bind(c, name='CHAMELEON_zsyr2k_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsyr2k_Tile_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
     end function CHAMELEON_zsyr2k_Tile_c
  end interface

  interface
     function CHAMELEON_zsyrk_Tile_c(uplo,trans,alpha,A,beta,C) &
          & bind(c, name='CHAMELEON_zsyrk_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsyrk_Tile_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
     end function CHAMELEON_zsyrk_Tile_c
  end interface

  interface
     function CHAMELEON_ztrmm_Tile_c(side,uplo,transA,diag,alpha,A,B) &
          & bind(c, name='CHAMELEON_ztrmm_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrmm_Tile_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: diag
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
     end function CHAMELEON_ztrmm_Tile_c
  end interface

  interface
     function CHAMELEON_ztrsm_Tile_c(side,uplo,transA,diag,alpha,A,B) &
          & bind(c, name='CHAMELEON_ztrsm_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrsm_Tile_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: diag
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
     end function CHAMELEON_ztrsm_Tile_c
  end interface

  interface
     function CHAMELEON_ztrsmpl_Tile_c(A,L,IPIV,B) &
          & bind(c, name='CHAMELEON_ztrsmpl_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrsmpl_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: L
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
     end function CHAMELEON_ztrsmpl_Tile_c
  end interface

  interface
     function CHAMELEON_ztrsmrv_Tile_c(side,uplo,transA,diag,alpha,A,B) &
          & bind(c, name='CHAMELEON_ztrsmrv_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrsmrv_Tile_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: diag
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
     end function CHAMELEON_ztrsmrv_Tile_c
  end interface

  interface
     function CHAMELEON_ztrtri_Tile_c(uplo,diag,A) &
          & bind(c, name='CHAMELEON_ztrtri_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrtri_Tile_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: diag
       type(c_ptr), value :: A
     end function CHAMELEON_ztrtri_Tile_c
  end interface

  interface
     function CHAMELEON_zunglq_Tile_c(A,T,B) &
          & bind(c, name='CHAMELEON_zunglq_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zunglq_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
     end function CHAMELEON_zunglq_Tile_c
  end interface

  interface
     function CHAMELEON_zungqr_Tile_c(A,T,B) &
          & bind(c, name='CHAMELEON_zungqr_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zungqr_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
     end function CHAMELEON_zungqr_Tile_c
  end interface

  interface
     function CHAMELEON_zunmlq_Tile_c(side,trans,A,T,B) &
          & bind(c, name='CHAMELEON_zunmlq_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zunmlq_Tile_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: trans
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
     end function CHAMELEON_zunmlq_Tile_c
  end interface

  interface
     function CHAMELEON_zunmqr_Tile_c(side,trans,A,T,B) &
          & bind(c, name='CHAMELEON_zunmqr_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zunmqr_Tile_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: trans
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
     end function CHAMELEON_zunmqr_Tile_c
  end interface

  !+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
  !  FORTRAN API - math functions (asynchronous interface)
  !
  interface
     function CHAMELEON_zgebrd_Tile_Async_c(A,D,E,T,sequence,request) &
          & bind(c, name='CHAMELEON_zgebrd_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgebrd_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: D
       type(c_ptr), value :: E
       type(c_ptr), value :: T
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgebrd_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgelqf_Tile_Async_c(A,T,sequence,request) &
          & bind(c, name='CHAMELEON_zgelqf_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgelqf_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgelqf_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgelqs_Tile_Async_c(A,T,B,sequence,request) &
          & bind(c, name='CHAMELEON_zgelqs_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgelqs_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgelqs_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgels_Tile_Async_c(trans,A,T,B,sequence,request) &
          & bind(c, name='CHAMELEON_zgels_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgels_Tile_Async_c
       integer(kind=c_int), value :: trans
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgels_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgemm_Tile_Async_c(transA,transB,alpha,A,B,beta,C,WS,sequence,request) &
          & bind(c, name='CHAMELEON_zgemm_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgemm_Tile_Async_c
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: transB
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       type(c_ptr), value :: WS
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgemm_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgeqrf_Tile_Async_c(A,T,sequence,request) &
          & bind(c, name='CHAMELEON_zgeqrf_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgeqrf_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgeqrf_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgeqrs_Tile_Async_c(A,T,B,sequence,request) &
          & bind(c, name='CHAMELEON_zgeqrs_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgeqrs_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgeqrs_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgesv_Tile_Async_c(A,IPIV,B,sequence,request) &
          & bind(c, name='CHAMELEON_zgesv_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgesv_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgesv_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgesv_incpiv_Tile_Async_c(A,L,IPIV,B,sequence,request) &
          & bind(c, name='CHAMELEON_zgesv_incpiv_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgesv_incpiv_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: L
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgesv_incpiv_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgesvd_Tile_Async_c(jobu,jobvt,A,S,U,VT,T,sequence,request) &
          & bind(c, name='CHAMELEON_zgesvd_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgesvd_Tile_Async_c
       integer(kind=c_int), value :: jobu
       integer(kind=c_int), value :: jobvt
       type(c_ptr), value :: A
       type(c_ptr), value :: S
       type(c_ptr), value :: U
       type(c_ptr), value :: VT
       type(c_ptr), value :: T
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgesvd_Tile_Async_c
  end interface
